kubernetes/apps/ai/memini/app/securitypolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: memini-main
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: memini-main
  extAuth:
    failOpen: false
    headersToExtAuth:
      - X-Forwarded-For
      - X-Forwarded-Proto
      - accept
      - authorization
      - cookie
      - proxy-authorization
    http:
      backendRefs:
        - group: ""
          kind: Service
          name: authelia
          namespace: identity
          port: 9191
      path: /api/authz/ext-authz/
      headersToBackend:
        - Remote-User
        - Remote-Groups
        - Remote-Name
        - Remote-Email
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: memini-ui
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: memini-ui
  extAuth:
    failOpen: false
    headersToExtAuth:
      - X-Forwarded-For
      - X-Forwarded-Proto
      - accept
      - authorization
      - cookie
      - proxy-authorization
    http:
      backendRefs:
        - group: ""
          kind: Service
          name: authelia
          namespace: identity
          port: 9191
      path: /api/authz/ext-authz/
      headersToBackend:
        - Remote-User
        - Remote-Groups
        - Remote-Name
        - Remote-Email
